<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepracer_systems_pkg</name>
  <version>0.0.1</version>
  <description>
    This package contains the DeepRacer system level packages responsible
    for software update system, managing reinforcement learning models,
    WiFi connection, ethernet over USB feature and running dependency script commands.
  </description>
  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>deepracer_interfaces_pkg</depend>
  <depend>status_led_pkg</depend>
  <depend>usb_monitor_pkg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
